--- a/Dash.Tests.csproj
+++ b/Dash.Tests.csproj
@@ -13,4 +13,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Web.App\Web.App.csproj" />
+  </ItemGroup>
+
 </Project>
